<resources>
    <string name="app_name">Cyber Struggle</string>
    <string name="description_one">Many scholars define Cyber as an additional domain alongside air, land, sea, and space. However, for us, this definition
        falls short and fails to assist the cybersecurity community in addressing today’s truly asymmetric and unconventional processes. Instead, we view
        cyber as a framework encompassing all other domains!</string>
    <string name="description_two">We clearly need a more effective approach. This isn’t just a warfare; it’s a never-ending struggle, akin to the work of
        special forces. These forces are trained not only in hybrid technical skills, but also in soft skills such as mental resilience, teamwork, leadership,
        and performance under high pressure, among others, to ensure functionality and productivity.</string>
    <string name="description_three">From this perspective, Cyber Struggle: Where technical acumen meets emotional resilience. Experience a transformative
        cybersecurity education in a dynamically changing, real-world simulated environment. We call it functional development.</string>
    <string name="community_ribbon_description_one">Cyber Struggle Ribbon Program aims to support our graduates for improvement both in technical aspects and
        attitude-wise. Thus, we assign a different ribbon for each act as a sign of respect and honor among our community.</string>
    <string name="community_ribbon_description_two">It is a reference and suggestion based process. Grads cannot apply to earn ribbons for themselves, instead
        one should be suggested by managers or team leads through brief justifications. Every ribbon requires at least 3 corresponding suggestions in order to
        be issued.</string>
    <string name="cyber_struggle_description_1">At Cyber Struggle, We are helping cybersecurity front-liners to remain functional, resilient, and primed;
        technically and psychologically, no matter the conditions. We’ve adopted the rigor and ethos of special forces, applying it to the cyber world.
        Our training methodology centers on shifting from mere know-how to know-why, focusing on functionality. And bring the “learning” concept to the
        “acquiring” concept with experience-based simulations. We aim to cultivate experts who are problem-solvers, resilient under pressure, adaptive,
        always ready, and technically hybrid, much like special forces. This approach is not just about preparing for the current landscape of cyber
        threats but evolving with it, ensuring that our professionals are not just participants in the cybersecurity domain but leaders who define its
        future.</string>
    <string name="journal_one_1">In what situations and on which topics are we told that we are good? Or on which topics is it expressed that we are weak? Why are we good at the subjects we’re told we’re good at? Is it an innate gift? Or did we put in a lot of effort to become good at it? Are we bad because we tried before and failed? Or because we’ve never tried? Or is it because we’ve tried repeatedly and failed each time? \nMessages about being good or bad at something may come from within us as much as from external sources. Especially since they contain words like “being”, these messages at some point become directly related to the identity through which we conduct our relationship with life.</string>
    <string name="journal_one_3">Perhaps it makes sense in this respect that identity-related feedback leads to more reflexes. For example, when giving feedback to someone, using expressions like ‘intelligent,’ ‘smart,’ ‘talented,’ or ‘very knowledgeable’ directly ties into their identity. Such feedback places a burden on the individual. Since we associate the person’s existence with this feedback, situations that contradict these messages can trigger reflexes related to their being. \nFeedback can also be given focusing on effort rather than identity and existence. For example, highlighting hard work, perseverance despite everything, attitudes displayed in the face of challenges, and focusing on the process. \nRegardless of the type, this feedback is entirely intertwined with our fundamental beliefs about what we can achieve. \nCarol Dweck and Claudia Mueller initiated an experimental study to research these two different approaches on children. In the study, one group of children received feedback directly associated with their identity, while another group received feedback emphasizing effort and process. Lastly, a control group received no feedback at all. The results of this study conducted with over 100 children are quite interesting!</string>
    <string name="journal_two_2">The Importance of Feedback Style</string>
    <string name="journal_one_5">We said feedback is important because, as Heidegger tried to explain with the concept of “Dasein,” we are in constant interaction with the world. The process of becoming something shapes through the meaning relationships and interactions we establish with the world. \nNeurons in the brain communicate via electrical and chemical signals. Dendrites transmit incoming signals to the nucleus; the nucleus gathers these signals and sends them to the axon; finally, the axon processes these signals and sends them to synapses. Synapses then transmit signals to other nerve cells. Normally, the transmission speed in neurons is about 50 centimeters per second, but in neurons where the axons are surrounded and protected by a myelin sheath, this transmission speed can be up to 240 times faster.</string>
    <string name="journal_one_7">Mindset, in general terms, can be said to be our life philosophy, stance, and perspective. Carol Dweck divides mindset into two different categories: fixed mindset and growth mindset. \nA fixed mindset is a success-oriented approach built with identity-based feedback, focusing on social status, constructed on limits, and avoiding mistakes to the maximum to protect what one has. \nIn contrast, a growth mindset rewards efforts, accepts the reality of neuroplasticity, and believes that by adapting and putting in effort, one can develop and always become better.</string>
    <string name="journal_one_8">In this effort-focused process, Carol Dweck talks about the importance of using the power of ‘yet’ instead of the tyranny of ‘now.’ Saying ‘not yet’ instead of ‘I can’t’ shows perseverance. It emphasizes an attitude and a path. Even this simple change in attitude starts to trigger neuroplastic development.</string>
    <string name="journal_six_2">This morning, Microsoft released patches for CVE–2020–0796 SMBv3 RCE Microsoft’s advisory said a crafted SMBv3 packet could be used to achieve remote code execution on a vulnerable SMB Endpoint with a large scope of windows versions:</string>
    <string name="journal_six_6">An integer overflow occurs when attacker send a crafted packet to the vulnerable SMB server, and this could lead to code execution on the context of “NT AUTHORITYSystem” on the other hand it’s a kernel pool overflow in a modern operating system so we’re talking about KALSR and other mitigations which’s that not much easy to see a new wannacry in the wild, but BSOD is so easy to achieve.</string>
    <string name="journal_six_4">The vulnerability does not affect Windows 7, 8, 8.1, or older versions.</string>
    <string name="journal_six_5">Vulnerability Exploitation</string>
    <string name="journal_six_3">1. Windows 10 v1903 \n2. Windows 10 v1909 \n3. Windows Server v1903 \n4. Windows Server v1909</string>
    <string name="journal_six_1">Vulnerability description</string>
    <string name="journal_seven_1">The discipline of “Intelligence” is often assumed to be practiced only by governmental agencies. However, in the field of cybersecurity, it is applied more than you think. Common practices in an ordinary SOC environment, such as; alert triaging, incident investigation, penetration testing, and threat intelligence, are all different forms of intelligence production. \nDespite that, we are applying these principles so often, few of us are aware of how structured intelligence cycle works. By applying this knowledge, we could better orient ourselves in times of uncertainty (like an investigation), define more pinpointed objectives, and get better results from our engagements. Now, let’s take a look at how this process works.</string>
    <string name="journal_seven_3">When someone is talking about intelligence, there is a good chance that they are talking about espionage (a.k.a spying). Espionage is closely related to intelligence however they are far from being the same thing. It is the main reason why this discipline is seen as somewhat mysterious by people. However, there is nothing mysterious about it. Intelligence is only a method for gaining the best value out of available information towards a specific purpose.</string>
    <string name="journal_seven_6">1. Is this event a false-positive or not? (Triage Analyst) \n2. What are the risks that this IT infrastructure contains? (Penetration tester) \n3. What are the cyber threats our company is facing? (CTI Analyst) \n4. What was the entry point of this attack? (DFIR, Tier 2 Analyst)</string>
    <string name="journal_seven_7">Definitions are essential. They shape our perceptions about the problem at hand. So we shall redefine the problem until we are sure we fully understand what is needed. Let us redefine questions from above.</string>
    <string name="journal_seven_5">Every cycle starts with a question. Answering questions is the main objective of the intelligence cycle. In the case of a SOC some of these questions are;</string>
    <string name="journal_eight_3">Unlike most, our team generally prefers “Bring Your Own Land” over “Living off the Land” in our red team engagements. So, we decided to continue this bypass drill with process injection. which is the same method we applied in FireEye EDR bypass previously. Initially, the main goal was a basic calculator popup by fuzzing the SEP. However, we got an interesting false positive detection. SEP classified this executable as “meterpreter” before execution. \n\nThis detection was a signature-based one because we did not execute our binary. We thought that maybe SEP classifies all kinds of process injection signatures as “meterpreter”, but then it is realized that this would be too risky for SEP and can also affect a lot of critical processes negatively.</string>
    <string name="journal_eight_2">In Red Teaming, it is essential to keep your tactical, mechanical skills, and operational competence updated with researches and drills. For operational competence against endpoint security solutions, we regularly research bypass methods, and separately combine our findings with tactical abilities like hiding and to operate undetected in our AD lab drills. \n\nIn our last research, we have bypassed FireEye EDR and get a meterpreter shell, also found a possible vulnerability. You can read it from here: https://cyberstruggle.org/fireeye-edr-bypassed-with-basic-process-injection/ \n\nThis time our team decided to publish writing about another popular security solution, Symantec Endpoint Protection (SEP). \n\nWe have installed SEP on a Windows 10 17763 operating system and wrote aggressive custom policies for high detection.</string>
    <string name="journal_eight_4">To get over this problem, we tried to add some random loops and math functions inside our code to change the hash value and maybe to confuse the SEP, but again SEP classified our executable as a malicious one.</string>
    <string name="journal_eight_5">Afterward, we erased the calculator shellcode inside the byte array and tried the same executable. At this time it was not detected. Either all kinds of static shellcodes inside the code were getting detected, or SEP classifies calculator shellcode as meterpreter shellcode.</string>
</resources>