<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".JournalSix">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/microsoft_smb"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/microsoft_smbvthree"
            android:scaleType="fitXY"
            android:layout_marginTop="40dp"
            />

        <TextView
            android:id="@+id/journal_six_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/journal_six_1"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/poppins_bold"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:layout_below="@id/microsoft_smb"
            />

        <TextView
            android:id="@+id/journal_six_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/journal_six_2"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:justificationMode="inter_word"
            android:fontFamily="@font/poppins_medium"
            android:textSize="13sp"
            android:layout_below="@id/journal_six_1"
            android:layout_marginTop="10dp"
            />

        <TextView
            android:id="@+id/journal_six_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/journal_six_3"
            android:layout_marginStart="40dp"
            android:layout_below="@id/journal_six_2"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/poppins"
            android:textSize="13sp"
            />

        <TextView
            android:id="@+id/journal_six_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/journal_six_4"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/poppins_medium"
            android:textSize="13sp"
            android:layout_below="@id/journal_six_3"
            android:layout_marginTop="5dp"
            />

        <TextView
            android:id="@+id/journal_six_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/journal_six_5"
            android:fontFamily="@font/poppins_bold"
            android:layout_marginStart="20dp"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/journal_six_4"
            />

        <TextView
            android:id="@+id/journal_six_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/journal_six_6"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/poppins_medium"
            android:textSize="13sp"
            android:layout_below="@id/journal_six_5"
            android:layout_marginTop="10dp"
            android:justificationMode="inter_word"
            />

    </RelativeLayout>

</ScrollView>