<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".JournalSeven">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/intelligenceplanning"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:src="@drawable/intelligenceplanning"
            android:scaleType="fitXY"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="40dp"
            />

        <TextView
            android:id="@+id/journal_seven_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/journal_seven_1"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:justificationMode="inter_word"
            android:fontFamily="@font/poppins_medium"
            android:textSize="13sp"
            android:layout_below="@id/intelligenceplanning"
            android:layout_marginTop="10dp"
            />

        <TextView
            android:id="@+id/journal_seven_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Point of View"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/poppins_bold"
            android:textSize="16sp"
            android:layout_below="@id/journal_seven_1"
            android:layout_marginTop="10dp"
            />

        <TextView
            android:id="@+id/journal_seven_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/journal_seven_3"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/poppins_medium"
            android:justificationMode="inter_word"
            android:textSize="13sp"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/journal_seven_2"
            />

        <TextView
            android:id="@+id/journal_seven_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Step-1: The Question"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/poppins_bold"
            android:textSize="16sp"
            android:layout_below="@id/journal_seven_3"
            android:layout_marginTop="10dp"
            />

        <TextView
            android:id="@+id/journal_seven_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/journal_seven_5"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:justificationMode="inter_word"
            android:fontFamily="@font/poppins_medium"
            android:textSize="13sp"
            android:layout_below="@id/journal_seven_4"
            android:layout_marginTop="10dp"
            />

        <TextView
            android:id="@+id/journal_seven_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/journal_seven_6"
            android:layout_below="@id/journal_seven_5"
            android:layout_marginTop="10dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="20dp"
            android:justificationMode="inter_word"
            android:fontFamily="@font/poppins"
            android:textSize="13sp"
            />

        <TextView
            android:id="@+id/journal_seven_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/journal_seven_7"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:justificationMode="inter_word"
            android:fontFamily="@font/poppins_medium"
            android:textSize="13sp"
            android:layout_marginTop="10dp"
            android:layout_below="@id/journal_seven_6"
            />

    </RelativeLayout>

</ScrollView>